--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,5 +1,5 @@
  :root {
-            --primary-color: #3a0ca3;
+            ---primary-color: #3a0ca3;
             --secondary-color: #4361ee;
             --accent-color: #7209b7;
             --text-color: #f8f9fa;
