--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -7,7 +7,10 @@
             -card-background: #1e1e1e;
             -border-radius: 12px;
         }
-        
+        :root {
+  --main-color: hotpink;
+  --pane-padding: 5px 42px;
+}
         * {
             margin: 0;
             padding: 0;
