--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -16,7 +16,7 @@
         }
         
         body {
-            background-color: var(background-color);
+            background-color:  #121212;
             color: var(-text-color);
             padding: 20px;
         }
