--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -529,3 +529,67 @@
             color: #777777;
             font-size: 0.9rem;
         }
+/* Small devices (phones, less than 600px) */
+@media (max-width: 600px) {
+  .header-container, .nav-menu, .search-bar, .game-card, .details-grid {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .nav-links {
+    flex-direction: column;
+    margin-right: 0;
+  }
+
+  .search-bar input {
+    width: 100%;
+  }
+
+  .game-card {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .details-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .game-icon {
+    width: 80px;
+    height: 80px;
+  }
+
+  .game-item {
+    width: 80px;
+  }
+
+  .game-item-icon {
+    width: 80px;
+    height: 80px;
+  }
+}
+
+/* Medium devices (tablets, 601px–900px) */
+@media (min-width: 601px) and (max-width: 900px) {
+  .details-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .search-bar input {
+    width: 200px;
+  }
+
+  .game-icon {
+    width: 90px;
+    height: 90px;
+  }
+
+  .game-item {
+    width: 90px;
+  }
+
+  .game-item-icon {
+    width: 90px;
+    height: 90px;
+  }
+}
