--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -570,4 +570,12 @@
             }
         }
     
-    
+#heroVideo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensures the video covers the area */
+  z-index: -1; /* Pushes video behind content */
+}
