--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -593,3 +593,23 @@
     height: 90px;
   }
 }
+h2.title {
+  font-size: 2.5rem;
+  font-weight: 800;
+  color: #ffffff;
+  text-align: center;
+  margin: 2rem 0 1rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  position: relative;
+}
+
+h2.title::after {
+  content: '';
+  display: block;
+  width: 60px;
+  height: 4px;
+  background-color: #00bfff;
+  margin: 0.5rem auto 0;
+  border-radius: 2px;
+}
