--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -345,6 +345,7 @@
         .description-text {
             font-size: 14px;
             line-height: 1.5;
+            color: white;
         }
         
         .read-more {
@@ -378,6 +379,8 @@
             font-size: 14px;
             font-weight: 600;
             margin-bottom: 4px;
+            color: white;
+
         }
         
         .detail-label {
@@ -411,6 +414,7 @@
             margin-bottom: 16px;
             padding-bottom: 16px;
             border-bottom: 1px solid #333;
+            color: white;
         }
         
         .review:last-child {
@@ -428,16 +432,18 @@
         .reviewer-name {
             font-size: 14px;
             font-weight: 600;
+            color: white;
         }
         
         .review-date {
             font-size: 12px;
-            color: #aaa;
+            color: white;
         }
         
         .review-text {
             font-size: 14px;
             line-height: 1.5;
+            color: white;
         }
         
         /* Similar games */
