--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -270,6 +270,7 @@
             font-size: 20px;
             font-weight: 600;
             margin-bottom: 4px;
+            color: white;
         }
         
         .game-developer {
