--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -7,7 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #333333;
+  background: #1e1e1e;
   transition: opacity 0.75s, visibility 0.75s;
 }
 
