--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -7,30 +7,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #1e1e1e;
-  transition: opacity 0.75s, visibility 0.75s;
+  background: #333333;
+  transition: opacity 0.75s ease;
+  z-index: 9999; /* make sure it's above all other content */
 }
 
 .loader--hidden {
   opacity: 0;
-  visibility: hidden;
-}
-
-.loader::after {
-  content: "";
-  width: 75px;
-  height: 75px;
-  border: 15px solid #dddddd;
-  border-top-color: #009578;
-  border-radius: 50%;
-  animation: loading 0.75s ease infinite;
-}
-
-@keyframes loading {
-  from {
-    transform: rotate(0turn);
-  }
-  to {
-    transform: rotate(1turn);
-  }
+  pointer-events: none;
 }
